responsive pagina bombas

--- a/pages/Bombas.html
+++ b/pages/Bombas.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="shortcut icon" href="../imagenes/icono.jpg" type="image/x-icon">
     <link rel="stylesheet" href="../css/style.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"/>
     <title>Bombas</title>
 </head>
 <body id="inicio" class="body__fondo">
@@ -23,7 +24,7 @@
         </nav>
     </div>
     <div>
-        <H1 class="h1__pages">Autopartes y Repuestos G&G</H1>
+        <H1 class="h1__pages animate__animated animate__rubberBand ">Autopartes y Repuestos G&G</H1>
     </div>
 </header>
             <!-- Menu des ervicios-->
@@ -103,7 +104,7 @@
         Una verificación sencilla de que la bomba está funcionando es girar la llave de encendido, pero si prender el motor. Se debe escuchar el zumbido de la bomba en pleno funcionamiento, por un lapso de 1 a 2 segundos,
         este tiempo es el suficiente para activar en su totalidad el sistema de inyección de combustible.
     </p>
-    <iframe width="500" height="300" src="https://www.youtube.com/embed/aRlQ1O9RE4E" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+    <iframe width="100%" height="300" src="https://www.youtube.com/embed/aRlQ1O9RE4E" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 </section>
 
 <!-- seccion bio de la empresa-->
@@ -126,8 +127,8 @@
     </p>
 </section>
 <section class=" section__pago">
-    <img  src="../imagenes/metodo_de_pago.png" alt="metodo_de_pago">
-    <img src="../imagenes/envio_pais.png" alt="envio_pais">
+    <img class="img__pago"  src="../imagenes/metodo_de_pago.png" alt="metodo_de_pago">
+    <img class="img__pago" src="../imagenes/envio_pais.png" alt="envio_pais">
 </section>
 <footer class="footer">
     <div class="nav__menu">
@@ -151,5 +152,7 @@
             <li>email: autopartesyrepuestosg&g@hotmail.com</li>
         </ol>
 </footer>
+<script src="./assets/js/wow.min.js"></script>
+        <script> new WOW().init(); </script>
 </body>
 </html>
