--- a/pages/Bombas.html
+++ b/pages/Bombas.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="shortcut icon" href="../imagenes/icono.jpg" type="image/x-icon">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <link rel="stylesheet" href="../css/style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"/>
     <title>Bombas</title>
@@ -40,7 +41,7 @@
                 </div>
                 <div>
                     <img class="pages" src="../imagenes/electricidad_electronica.png" alt="electricidad_electronica">
-                    <a class="pages" href="./electricidad_electronica.html">Electricidad y Electronica</a>
+                    <a class="pages" href="./electricidad_electronica.html">Electricidad</a>
                 </div>
                 <div>
                     <img class="pages" src="../imagenes/frenos.png" alt="frenos">
