cambio en el index

--- a/index.html
+++ b/index.html
@@ -24,9 +24,12 @@
         </nav>
     </div>
     <div>
-    <H1 class="h1__index animate__animated animate__rubberBand">Autopartes y Repuestos G&G</H1>
     </div>
+    
 </header>
+<div>
+    <H1 class="h1__index animate__animated animate__rubberBand">Autopartes y Repuestos G&G</H1>
+</div>
                 <!-- Menu de servicios que ofrece la empresa-->
     <section class="section__pages">
         <nav class="nav__pages hove__pages">  
