agregar animaciones,solucionar problema con margenes del h1, y iframe de pages bombas

--- a/pages/Bombas.html
+++ b/pages/Bombas.html
@@ -24,10 +24,9 @@
             <a class="menu" href="./servicios.html">Servicios</a>
         </nav>
     </div>
-    <div>
-        <H1 class="h1__pages animate__animated animate__rubberBand ">Autopartes y Repuestos G&G</H1>
-    </div>
+        
 </header>
+    <H1 class="h1__pages animate__animated animate__rubberBand ">Autopartes y Repuestos G&G</H1>
             <!-- Menu des ervicios-->
 <section id="repuestos" class="section__pages">
         <nav class="nav__pages">
@@ -105,7 +104,7 @@
         Una verificación sencilla de que la bomba está funcionando es girar la llave de encendido, pero si prender el motor. Se debe escuchar el zumbido de la bomba en pleno funcionamiento, por un lapso de 1 a 2 segundos,
         este tiempo es el suficiente para activar en su totalidad el sistema de inyección de combustible.
     </p>
-    <iframe width="100%" height="300" src="https://www.youtube.com/embed/aRlQ1O9RE4E" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+    <iframe class="video__sabiasque" height="300" src="https://www.youtube.com/embed/aRlQ1O9RE4E" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 </section>
 
 <!-- seccion bio de la empresa-->
