--- a/pages/servicios.html
+++ b/pages/servicios.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="shortcut icon" href="../imagenes/icono.jpg" type="image/x-icon">
     <link rel="stylesheet" href="../css/style.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"/>
     <title>Document</title>
 </head>
 <body>
@@ -21,7 +22,7 @@
         </nav>
         </div>
         <div>
-            <H1 class="h1__index" id="inicio">Autopartes y Repuestos G&G </H1>
+            <H1 class="h1__index animate__animated animate__rubberBand " id="inicio">Autopartes y Repuestos G&G </H1>
         </div>
 </header>
     <!--Section de servicios -->
@@ -108,5 +109,7 @@
             <li>email: autopartesyrepuestosg&g@hotmail.com</li>
         </ol>
     </footer>
+<script src="./assets/js/wow.min.js"></script>
+        <script> new WOW().init(); </script>
 </body>
 </html>
