--- a/pages/carroceria.html
+++ b/pages/carroceria.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="shortcut icon" href="../imagenes/icono.jpg" type="image/x-icon">
     <link rel="stylesheet" href="../css/style.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"/>
     <title>Carroceria</title>
 </head>
 <body id="inicio" class="body__fondo">
@@ -22,10 +23,8 @@
             <a class="menu" href="./servicios.html">Servicios</a>
         </nav>
     </div>
-    <div>
-        <H1 class="h1__pages">Autopartes y Repuestos G&G</H1>
-    </div>
 </header>
+    <H1 class="h1__pages animate__animated animate__rubberBand ">Autopartes y Repuestos G&G</H1>
             <!-- Menu des ervicios-->
 <section id="repuestos" class="section__pages">
         <nav class="nav__pages">
@@ -154,5 +153,7 @@
         </ol>
     </div>
 </footer>
+    <script src="./assets/js/wow.min.js"></script>
+        <script> new WOW().init(); </script>
 </body>
 </html>
