--- a/pages/frenos.html
+++ b/pages/frenos.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="shortcut icon" href="../imagenes/icono.jpg" type="image/x-icon">
     <link rel="stylesheet" href="../css/style.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"/>
     <title>Frenos</title>
 </head>
 <body id="inicio" class="body__fondo">
@@ -22,150 +23,150 @@
             <a class="menu" href="./servicios.html">Servicios</a>
         </nav>
     </div>
-    <div>
-        <H1 class="h1__pages">Autopartes y Repuestos G&G</H1>
-    </div>
-</header>
-            <!-- Menu des ervicios-->
-<section id="repuestos" class="section__pages">
-        <nav class="nav__pages">
-            <div class="div__pages__hijos" >
-                <img class="pages" src="../imagenes/carroceria.png" alt="carroceria">
-                <a class="pages" href="./carroceria.html">Carroceria</a>
-            </div>
-            <div class="div__pages__hijos" >
-                <img class="pages" src="../imagenes/embragues.png" alt="embragues">
-                <a class="pages" href="./embragues.html">Embragues</a>
-            </div>
-            <div class="div__pages__hijos" >
-                <img class="pages" src="../imagenes/electricidad_electronica.png" alt="electricidad_electronica">
-                <a class="pages" href="./electricidad_electronica.html">Electricidad y Electronica</a>
-            </div>
-            <div class="div__pages__hijos" >
-                <img class="pages" src="../imagenes/bombas.png" alt="bombas">
-                <a class="pages" href="./Bombas.html">Bombas</a>
-            </div>
-            <div class="div__pages__hijos" >
-                <img class="pages" src="../imagenes/tensores.png" alt="correas">
-                <a class="pages" href="./correas_tensores.html">correas y tensores</a>
-            </div>
-            <div class="div__pages__hijos" >
-                <img class="pages" src="../imagenes/motor.png" alt="motor">  
-                <a class="pages" href="./motor.html">motor</a>
-            </div>
-            <div class="div__pages__hijos" >
-                <img class="pages" src="../imagenes/transmision.png" alt="transmision">
-                <a class="pages" href="./transmision.html">transmisiòn</a>
-            </div>
-        </nav>
-</section>
-<section id="lista" class="section__repuesto"">
-    <div>
-        <h2 id="lista" class="h2__contacto">
-            Haga su consulta
-        </h2>
-    </div>
-    <form class="cuadro__consulta" action=""> 
+</header>    
+            <H1 class="h1__pages animate__animated animate__rubberBand ">Autopartes y Repuestos G&G</H1>
+                <!-- Menu des ervicios-->
+    <section id="repuestos" class="section__pages">
+            <nav class="nav__pages">
+                <div class="div__pages__hijos" >
+                    <img class="pages" src="../imagenes/carroceria.png" alt="carroceria">
+                    <a class="pages" href="./carroceria.html">Carroceria</a>
+                </div>
+                <div class="div__pages__hijos" >
+                    <img class="pages" src="../imagenes/embragues.png" alt="embragues">
+                    <a class="pages" href="./embragues.html">Embragues</a>
+                </div>
+                <div class="div__pages__hijos" >
+                    <img class="pages" src="../imagenes/electricidad_electronica.png" alt="electricidad_electronica">
+                    <a class="pages" href="./electricidad_electronica.html">Electricidad y Electronica</a>
+                </div>
+                <div class="div__pages__hijos" >
+                    <img class="pages" src="../imagenes/bombas.png" alt="bombas">
+                    <a class="pages" href="./Bombas.html">Bombas</a>
+                </div>
+                <div class="div__pages__hijos" >
+                    <img class="pages" src="../imagenes/tensores.png" alt="correas">
+                    <a class="pages" href="./correas_tensores.html">correas y tensores</a>
+                </div>
+                <div class="div__pages__hijos" >
+                    <img class="pages" src="../imagenes/motor.png" alt="motor">  
+                    <a class="pages" href="./motor.html">motor</a>
+                </div>
+                <div class="div__pages__hijos" >
+                    <img class="pages" src="../imagenes/transmision.png" alt="transmision">
+                    <a class="pages" href="./transmision.html">transmisiòn</a>
+                </div>
+            </nav>
+    </section>
+    <section id="lista" class="section__repuesto"">
         <div>
-            <label class="consulta__contacto" for="producto"> Producto</label>
-                <input class="consulta__contacto" type="text" name="selecciona un producto" id="consulta" placeholder="Escribe el producto" required>
-            <label class="consulta__contcto" for="descripcion"> Descripcion</label>
-                <input type="text" name="descripcion" id="descripcion" placeholder="Escribe la descripcion" required>
-            <label class="consulta__contacto" for="Medida"> Medida </label>
-                <input type="text" name="Medida" id="Medida" placeholder=" Escribe la medida" required>
-            <label class="consulta__Contacto" for="Marca"> Marca</label>
-                <input type="text" name="Marca" id="marca" placeholder="Escribe la marca" required>
-        <div>
-        <div>
-            <input class="boton__buscar" type="button" value="Ver">
-        </div>  
-    </form>
-        <div class="h3">
-            <h3 class="h3"> Frenos </h3>
+            <h2 id="lista" class="h2__contacto">
+                Haga su consulta
+            </h2>
         </div>
-        <div class="div__marca">
-            <img class="imagenes__service" src="../imagenes/marcas_frenos.png" alt="frenos">
-        </div>  
-</section>
+        <form class="cuadro__consulta" action=""> 
+            <div>
+                <label class="consulta__contacto" for="producto"> Producto</label>
+                    <input class="consulta__contacto" type="text" name="selecciona un producto" id="consulta" placeholder="Escribe el producto" required>
+                <label class="consulta__contcto" for="descripcion"> Descripcion</label>
+                    <input type="text" name="descripcion" id="descripcion" placeholder="Escribe la descripcion" required>
+                <label class="consulta__contacto" for="Medida"> Medida </label>
+                    <input type="text" name="Medida" id="Medida" placeholder=" Escribe la medida" required>
+                <label class="consulta__Contacto" for="Marca"> Marca</label>
+                    <input type="text" name="Marca" id="marca" placeholder="Escribe la marca" required>
+            <div>
+            <div>
+                <input class="boton__buscar" type="button" value="Ver">
+            </div>  
+        </form>
+            <div class="h3">
+                <h3 class="h3"> Frenos </h3>
+            </div>
+            <div class="div__marca">
+                <img class="imagenes__service" src="../imagenes/marcas_frenos.png" alt="frenos">
+            </div>  
+    </section>
 <!--
     <section><section>  aca va un section donde estaran todos los repuestos pero aun no tengo la info
 --> 
-<h2 class="h2__contacto"> ¿Sabias que ?</h2>
-<section class="section__contacto">
-    
-    <p class="p__nosotros"> 
-        ¿CÓMO CUIDARLOS?
- Este sistema es primordial para circular con toda la seguridad, sin embargo debido al constante uso que se les da, se desgastan con rapidez y pueden convertirse en un gran peligro si no cuentan con el mantenimiento adecuado. Por eso te recomendamos:
+        <h2 class="h2__contacto"> ¿Sabias que ?</h2>
+    <section class="section__contacto">
+        
+        <p class="p__nosotros"> 
+            ¿CÓMO CUIDARLOS?
+    Este sistema es primordial para circular con toda la seguridad, sin embargo debido al constante uso que se les da, se desgastan con rapidez y pueden convertirse en un gran peligro si no cuentan con el mantenimiento adecuado. Por eso te recomendamos:
 
-<strong>CONTAR CON LAS LLANTAS ADECUADAS </strong>
-Aumenta la seguridad con llantas que tengan una excelente respuesta incluso en curvas. Las mejores llantas están en Bridgestone, elige la tuya aquí.
+    <strong>CONTAR CON LAS LLANTAS ADECUADAS </strong>
+    Aumenta la seguridad con llantas que tengan una excelente respuesta incluso en curvas. Las mejores llantas están en Bridgestone, elige la tuya aquí.
 
-<strong>USAR EL CAMBIO DE MARCHA </strong>
-Es una buena opción para disminuir la velocidad sin necesidad de usar el pedal de frenado.
+    <strong>USAR EL CAMBIO DE MARCHA </strong>
+    Es una buena opción para disminuir la velocidad sin necesidad de usar el pedal de frenado.
 
-<strong> FRENAR BRUSCAMENTE</strong>
-Ya que estarás exponiendo tus frenos a un desgaste mayor y necesitarás cambiarlos con más frecuencia.
+    <strong> FRENAR BRUSCAMENTE</strong>
+    Ya que estarás exponiendo tus frenos a un desgaste mayor y necesitarás cambiarlos con más frecuencia.
 
-<strong>REVISAR PERIÓDICAMENTE EL LÍQUIDO DE FRENOS</strong> 
-Sobre todo debes estar pendiente de que se mantenga en el nivel adecuado.
+    <strong>REVISAR PERIÓDICAMENTE EL LÍQUIDO DE FRENOS</strong> 
+    Sobre todo debes estar pendiente de que se mantenga en el nivel adecuado.
 
-<strong> CHECAR EL DISCO</strong>
-Un líquido de frenos en mal estado puede afectar su funcionamiento y desgastarlo con mayor facilidad. Estos 4 tips para limpiar las llantas de tu auto también pueden ayudar.
+    <strong> CHECAR EL DISCO</strong>
+    Un líquido de frenos en mal estado puede afectar su funcionamiento y desgastarlo con mayor facilidad. Estos 4 tips para limpiar las llantas de tu auto también pueden ayudar.
 
-<strong> REVISAR LAS BALATAS</strong>
-Debido al desgaste por fricción pueden comenzar a fallar, por lo que te recomendamos cambiarlas cuando estén muy delgadas.
+    <strong> REVISAR LAS BALATAS</strong>
+    Debido al desgaste por fricción pueden comenzar a fallar, por lo que te recomendamos cambiarlas cuando estén muy delgadas.
 
-<strong> REALIZAR EL SERVICIO</strong>
-Siempre debes exigir la revisión y el ajuste del sistema de frenado así como la alineación y el balanceo con tu servicio, aquí te decimos por qué es importante
-</p>
-<iframe width="500" height="300" src="https://www.youtube.com/embed/FTofIyD8MFQ" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-</section>
+    <strong> REALIZAR EL SERVICIO</strong>
+    Siempre debes exigir la revisión y el ajuste del sistema de frenado así como la alineación y el balanceo con tu servicio, aquí te decimos por qué es importante
+    </p>
+    <iframe width="500" height="300" src="https://www.youtube.com/embed/FTofIyD8MFQ" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+    </section>
 
 <!-- seccion bio de la empresa-->
 
-<section class="section__nosotros__pages"> 
-    <h2 id="empresa" class="h2__nosotros__pages"  >Sobre  nosotros</h2>
-    <p class="p__nosotros__pages">
-        Somos una empresa comercializadora de repuestos para vehículos comerciales Ford, Volkswagen, Fiat, Chevrolet, Renault, Jeep, Toyota (pick-ups, camiones, utilitarios y buses). Nos caracterizamos por disponer de inventarios completos de piezas para vehículos de nuestra especialidad, abarcando modelos desde 1990 hasta los de más reciente aparición en nuestro mercado.
-        Mantenemos 22.000 referencias en stock permanente.
-        Contamos con amplias instalaciones, y personal de ventas altamente capacitado.
-    </p>
+    <section class="section__nosotros__pages"> 
+        <h2 id="empresa" class="h2__nosotros__pages"  >Sobre  nosotros</h2>
+        <p class="p__nosotros__pages">
+            Somos una empresa comercializadora de repuestos para vehículos comerciales Ford, Volkswagen, Fiat, Chevrolet, Renault, Jeep, Toyota (pick-ups, camiones, utilitarios y buses). Nos caracterizamos por disponer de inventarios completos de piezas para vehículos de nuestra especialidad, abarcando modelos desde 1990 hasta los de más reciente aparición en nuestro mercado.
+            Mantenemos 22.000 referencias en stock permanente.
+            Contamos con amplias instalaciones, y personal de ventas altamente capacitado.
+        </p>
 
-    <div class="p__nosotros__pages">
-        <strong> ESTO NOS PERMITE DESPACHAR CUALQUIER PEDIDO ESTRICTAMENTE EN EL DÍA, CON 100% DE EFECTIVIDAD </strong> 
-    </div>
-
-    <p class="p__nosotros__pages">
-        Nos avalan más de 10 años de permanencia en el mercado, habiendo podido combinar nuestra tradición y cultura empresarial, con tecnología e innovación.
-        Quedamos desde ya a su disposición. Será una satisfacción para nosotros responder a su contacto
-    </p>
-</section>
-<section class=" section__pago">
-    <img  src="../imagenes/metodo_de_pago.png" alt="metodo_de_pago">
-    <img src="../imagenes/envio_pais.png" alt="envio_pais">
-</section>
-<!--footer de la empresa-->
-<footer class="footer">
-    <div class="nav__menu">
-        <a class="menu" href="#inicio">inico</a>
-        <a class="menu" href="#lista">Lista</a>
-        <a class="menu" href="#empresa">Empresa</a>
-        <a class="menu" href="#repuestos">Repuestos</a>
+        <div class="p__nosotros__pages">
+            <strong> ESTO NOS PERMITE DESPACHAR CUALQUIER PEDIDO ESTRICTAMENTE EN EL DÍA, CON 100% DE EFECTIVIDAD </strong> 
         </div>
-        <a href="https://www.facebook.com/">
-            <img  class="img__footer" src="../imagenes/Facebook.png" alt="facebook" width="50px">
-        </a>
-        <a href="https://www.instagram.com/">
-            <img class="img__footer" src="../imagenes/1025px-Instagram-Icon.png" alt="instagram" width="50px">
-        </a>
-        <a href="https://twitter.com/">
-            <img class="img__footer" src="../imagenes/twitter.png" alt="twitter" width="50px">
-        </a>
-        <ol class="ol__footer">
-            <li>celular : +58 414 2563256</li>
-            <li>telefono fijo :0212 112390991 </li>
-            <li>email: autopartesyrepuestosg&g@hotmail.com</li>
-        </ol>
-</footer>
+
+        <p class="p__nosotros__pages">
+            Nos avalan más de 10 años de permanencia en el mercado, habiendo podido combinar nuestra tradición y cultura empresarial, con tecnología e innovación.
+            Quedamos desde ya a su disposición. Será una satisfacción para nosotros responder a su contacto
+        </p>
+    </section>
+    <section class=" section__pago">
+        <img  src="../imagenes/metodo_de_pago.png" alt="metodo_de_pago">
+        <img src="../imagenes/envio_pais.png" alt="envio_pais">
+    </section>
+<!--footer de la empresa-->
+    <footer class="footer">
+        <div class="nav__menu">
+            <a class="menu" href="#inicio">inico</a>
+            <a class="menu" href="#lista">Lista</a>
+            <a class="menu" href="#empresa">Empresa</a>
+            <a class="menu" href="#repuestos">Repuestos</a>
+            </div>
+            <a href="https://www.facebook.com/">
+                <img  class="img__footer" src="../imagenes/Facebook.png" alt="facebook" width="50px">
+            </a>
+            <a href="https://www.instagram.com/">
+                <img class="img__footer" src="../imagenes/1025px-Instagram-Icon.png" alt="instagram" width="50px">
+            </a>
+            <a href="https://twitter.com/">
+                <img class="img__footer" src="../imagenes/twitter.png" alt="twitter" width="50px">
+            </a>
+            <ol class="ol__footer">
+                <li>celular : +58 414 2563256</li>
+                <li>telefono fijo :0212 112390991 </li>
+                <li>email: autopartesyrepuestosg&g@hotmail.com</li>
+            </ol>
+    </footer>
+        <script src="./assets/js/wow.min.js"></script>
+    <script> new WOW().init(); </script>
 </body>
 </html>
