--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title> Autopartes y Repuestos G&G</title>
     <link rel="shortcut icon" href="./imagenes/icono.jpg" type="image/x-icon">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <link rel="stylesheet" href="./css/style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"/>
 </head>
@@ -17,15 +18,14 @@
     </div>
     <div class="div__menu">
         <nav class="nav__menu">
-            <a class="menu" href="#section_contacto">Contacto</a>
-            <a class="menu" href="#empresa">Empresa</a>
-            <a class="menu" href="#viajero">Viajero</a>
-            <a class="menu" href="./pages/servicios.html">Servicios</a>
+            <a class="menu btn btn-primary" href="#section_contacto">Contacto</a>
+            <a class="menu btn btn-primary" href="#empresa">Empresa</a>
+            <a class="menu btn btn-primary" href="#viajero">Viajero</a>
+            <a class="menu btn btn-primary" href="./pages/servicios.html">Servicios</a>
         </nav>
     </div>
     <div>
     </div>
-    
 </header>
 <div>
     <H1 class="h1__index animate__animated animate__rubberBand">Autopartes y Repuestos G&G</H1>
@@ -39,7 +39,7 @@
             </div>
             <div class="div__pages__hijos" >
                 <img class="pages" src="./imagenes/embragues.png" alt="embragues">
-                <a class="texto__menu" href="./pages/embragues.html"> embragues</a> 
+                <a class="texto__menu " href="./pages/embragues.html"> embragues</a> 
             </div>
             <div class="div__pages__hijos" >
                 <img class="pages" src="./imagenes/electricidad_electronica.png" alt="">
@@ -73,21 +73,46 @@
     </section>
 
     <section >
-        <div> <h2 class="h2__viajero"> Consulta por el servicio para el viajero</h2></div>
-        <div class="div__viajero" >
-            <div>
-                <img class="imagen__viajero" src="./imagenes/Cambio de aceite.jpg" alt="cambio aceite">
-                <h3 class="h3__pages"> Service Completo</h3>
+        <div> 
+            <h2 class="h2__viajero" id="viajero"> Consulta por el servicio para el viajero</h2>
+        </div>
+        <div id="carouselExampleCaptions" class="carousel slide" data-bs-ride="carousel">
+                <div class="carousel-indicators">
+                    <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
+                    <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="1" aria-label="Slide 2"></button>
+                    <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="2" aria-label="Slide 3"></button>
+                </div>
+            <div class="carousel-inner">
+                <div class="carousel-item active">
+                    <img src="./imagenes/cambio-aceite-1800x728.jpg" class="d-block w-100" alt="cambio aceite" height="700px" >
+                    <div class="carousel-caption d-none d-md-block">
+                        <h2>Cambio de Aceite</h2>
+                        <p class="p__carrusel">Recuerda hacerlo cada 10.000 km</p>
+                    </div>
+                </div>
+                <div class="carousel-item ">
+                    <img src="./imagenes/Alineacion_Balanceo_big-1.jpg" class="d-block w-100" alt="alineacion" height="700px" >
+                    <div class="carousel-caption d-none d-md-block">
+                        <h2>Alineacion, Rotacion y Balanceo</h2>
+                        <p class="p__carrusel">Recuerda hacerlo cada 15.000 km</p>
+                    </div>
+                </div>
+                <div class="carousel-item ">
+                    <img src="./imagenes/sitema-frenos-elementos-disco-pinza-bmw-m2_1440x655c.jpg" class="d-block w-100" alt="frenos" height="700px"  >
+                    <div class="carousel-caption d-none d-md-block">
+                        <h2>Verifica los frenos </h2>
+                        <p class="p__carrusel">Recuerda hacerlo cada 10.000 km</p>
+                    </div>
+                </div>
             </div>
-                <div> <img class="imagen__viajero" src="./imagenes/Alineacion_big-1.jpg" alt="Alineacion">
-                <h3 class="h3__pages"> Alineación y Balanceo</h3>
-            </div>
-                <div><img class="imagen__viajero"  src="./imagenes/sitema-frenos-elementos-disco-pinza-bmw-m2_1440x655c.jpg" alt="frenos"> 
-                <h3 class="h3__pages" > Verificación de Frenos</h3>
-            </div>
-                <div><img class="imagen__viajero" src="./imagenes/liquido-refrigerante.jpg" alt="refrigerante">
-                <h3 class="h3__pages" >Verificación de Refrigerante</h3>
-            </div>
+                <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide="prev">
+                    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                    <span class="visually-hidden">Previous</span>
+                </button>
+                <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide="next">
+                    <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                    <span class="visually-hidden">Next</span>
+                </button>
         </div>
     </section>
         <!-- Seccion de atencion que se le brinda al cliente-->
@@ -142,7 +167,7 @@
         <div class="div__contacto">
             <h2 class="h2__contacto">Contacto</h2>
             <h3 class="h3__contacto">Consulte por su repuesto </h3>
-        </div>
+        <!-- </div>
             <form class="cuadro__consulta" action="" method="">
                 <div>  
                     <label  for="Nombre">Nombre</label>
@@ -162,7 +187,16 @@
                 </div>
                 <div>
                     <textarea class="consulta__textarea" name=" Escribe aca tu pregunta" id="Pregunta" cols="30" rows="10">
-                    </textarea>
+                    </textarea>-->
+                <div class="mb-3">
+                    <label for="exampleFormControlInput1" class="form-label">Email address</label>
+                    <input type="email" class="form-control" id="exampleFormControlInput1" placeholder="name@example.com">
+                </div>
+                <div class="mb-3">
+                    <label for="exampleFormControlTextarea1" class="form-label">Example textarea</label>
+                    <textarea class="form-control" id="exampleFormControlTextarea1" rows="3"></textarea>
+                </div>
+
                         <table class="table__border">
                             <tr >
                                 <td class="table__border">
@@ -198,11 +232,11 @@
                     <!--footer de la pagina-->
 <footer class="footer">
     <div class="div__menu">
-        <a class="menu" href="#inicio">Arriba</a>
-        <a class="menu" href="#section_contacto">Contacto</a>
-        <a class="menu"href="#empresa">Empresa</a>
-        <a class="menu" href="./pages/servicios.html">Servicios</a>
-        <a class="menu" href="#viajero">viajero</a>
+        <a class="menu btn btn-primary" href="#inicio">Arriba</a>
+        <a class="menu btn btn-primary" href="#section_contacto">Contacto</a>
+        <a class="menu btn btn-primary"href="#empresa">Empresa</a>
+        <a class="menu btn btn-primary" href="./pages/servicios.html">Servicios</a>
+        <a class="menu btn btn-primary" href="#viajero">viajero</a>
     </div>
     <a href="https://www.facebook.com/">
         <img  class="img__footer" src="./imagenes/Facebook.png" alt="facebook">
@@ -221,6 +255,7 @@
         </ol>
     </div>
 </footer>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
 <script src="./assets/js/wow.min.js"></script>
         <script> new WOW().init(); </script>
 </body>
