--- a/pages/servicios.html
+++ b/pages/servicios.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="shortcut icon" href="../imagenes/icono.jpg" type="image/x-icon">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <link rel="stylesheet" href="../css/style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"/>
     <title>Document</title>
@@ -17,8 +18,8 @@
         <div class="div__menu">
             <nav class="nav__menu">
 
-            <a class="menu" href="#section_contacto">Contacto</a>
-            <a class="menu" href="../index.html"> Inicio</a>
+            <a class="menu btn btn-primary" href="#section_contacto">Contacto</a>
+            <a class="menu btn btn-primary" href="../index.html"> Inicio</a>
         </nav>
         </div>
         <div>
@@ -59,7 +60,7 @@
                 <li>email: autopartesyrepuestosg&g@hotmail.com</li>
             </ul>
         </div>
-    <div>
+     <!--<div>
         <form class="cuadro__consulta" action="" method="">
             <div>  
                 <label  for="Nombre">Nombre</label>
@@ -83,16 +84,24 @@
                 </textarea>
                 <input type="button" value="Enviar">
                 <p class="p__contacto">
-    </div> 
+    </div> -->
+    <div class="mb-3">
+        <label for="exampleFormControlInput1" class="form-label">Email address</label>
+        <input type="email" class="form-control" id="exampleFormControlInput1" placeholder="name@example.com">
+    </div>
+    <div class="mb-3">
+        <label for="exampleFormControlTextarea1" class="form-label">Example textarea</label>
+        <textarea class="form-control" id="exampleFormControlTextarea1" rows="3"></textarea>
+    </div>
 </section>
 <div>
     <iframe  src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3928.3414226903947!2d-69.30699548626473!3d10.071085292802438!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x8e876776baed2795%3A0x4465f249b7c59901!2sCarrera%2023%20%26%20Calle%2013%2C%20Barquisimeto%203001%2C%20Lara%2C%20Venezuela!5e0!3m2!1sen!2sar!4v1636903870977!5m2!1sen!2sar" width="100%" height="450" style="border: 5px;;" allowfullscreen="" loading="lazy"></iframe>
 </div>
     <footer class="footer">
         <div class="div__menu">
-        <a class="menu" href="#inicio">Arriba</a>
-        <a class="menu" href="#section_contacto">Contacto</a>
-        <a class="menu" href= "../index.html">Inicio</a>
+        <a class="menu btn btn-primary" href="#inicio">Arriba</a>
+        <a class="menu btn btn-primary" href="#section_contacto">Contacto</a>
+        <a class="menu btn btn-primary" href= "../index.html">Inicio</a>
         </div>
             <a href="https://www.facebook.com/">
             <img  class="img__footer" src="../imagenes/Facebook.png" alt="facebook" width="50px">
@@ -109,6 +118,7 @@
             <li>email: autopartesyrepuestosg&g@hotmail.com</li>
         </ol>
     </footer>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
 <script src="./assets/js/wow.min.js"></script>
         <script> new WOW().init(); </script>
 </body>
