solucione problema del padding y ademas solucione problemas con el menu principal e hice responsive las paginas

--- a/pages/carroceria.html
+++ b/pages/carroceria.html
@@ -77,7 +77,7 @@
                     </div>
                     <div class="div__pages__hijos" >
                         <a class="texto__menu" href="./correas_tensores.html">
-                        <img class="pages" src="../imagenes/tensores.png" alt="correas"> correas y tensores</a> 
+                        <img class="pages" src="../imagenes/tensores.png" alt="correas"> Correas</a> 
                     </div>
                     <div class="div__pages__hijos">  
                         <a class="texto__menu" href="./motor.html"> 
