--- a/pages/electricidad_electronica.html
+++ b/pages/electricidad_electronica.html
@@ -55,34 +55,34 @@
             <H1 class="h1__pages animate__animated animate__rubberBand ">Autopartes y Repuestos G&G</H1>
             <!-- Menu des ervicios-->
         <section id="repuestos" class="section__pages">
-                <nav class="nav__pages">
+                <nav class="nav__pages hove__pages">
                         <div class="div__pages__hijos" >
-                            <img class="pages" src="../imagenes/carroceria.png" alt="carroceria">
-                            <a class="pages" href="./carroceria.html">Carroceria</a>
+                            <a class="pages" href="./carroceria.html">
+                            <img class="pages" src="../imagenes/carroceria.png" alt="carroceria">Carroceria</a>
                         </div>
                         <div class="div__pages__hijos" >
-                            <img class="pages" src="../imagenes/embragues.png" alt="embragues">
-                            <a class="pages" href="./embragues.html">Embragues</a>
+                            <a class="pages" href="./embragues.html">
+                            <img class="pages" src="../imagenes/embragues.png" alt="embragues">Embragues</a>
                         </div>
                         <div class="div__pages__hijos" >
-                            <img class="pages" src="../imagenes/frenos.png" alt="frenos">
-                            <a class="pages" href="./frenos.html"> frenos</a>
+                            <a class="pages" href="./frenos.html"> 
+                            <img class="pages" src="../imagenes/frenos.png" alt="frenos">Frenos</a>
                         </div>
                         <div class="div__pages__hijos" > 
-                            <img class="pages" src="../imagenes/bombas.png" alt="bombas">
-                            <a class="pages" href="./Bombas.html">Bombas</a>
+                            <a class="pages" href="./Bombas.html">
+                            <img class="pages" src="../imagenes/bombas.png" alt="bombas">Bombas</a>
                         </div>
                         <div class="div__pages__hijos" >
-                            <img class="pages" src="../imagenes/tensores.png" alt="correas">
-                            <a class="pages" href="./correas_tensores.html">correas y tensores</a>
+                            <a class="pages" href="./correas_tensores.html">
+                            <img class="pages" src="../imagenes/tensores.png" alt="correas">Correas</a>
                         </div>
                         <div class="div__pages__hijos" >
-                            <img class="pages" src="../imagenes/motor.png" alt="motor">
-                            <a class="pages" href="./motor.html">motor</a>
+                            <a class="pages" href="./motor.html">
+                            <img class="pages" src="../imagenes/motor.png" alt="motor">Motor</a>
                         </div>
                         <div class="div__pages__hijos" >
-                            <img class="pages" src="../imagenes/transmision.png" alt="transmision">
-                            <a class="pages" href="./transmision.html">transmisiòn</a>
+                            <a class="pages" href="./transmision.html">
+                            <img class="pages" src="../imagenes/transmision.png" alt="transmision">Transmisiòn</a>
                         </div>
                 </nav>
         </section>
