--- a/pages/embragues.html
+++ b/pages/embragues.html
@@ -54,34 +54,34 @@
         <H1 class="h1__pages animate__animated animate__rubberBand ">Autopartes y Repuestos G&G</H1>
             <!-- Menu des ervicios-->
                 <section id="repuestos" class="section__pages">
-                    <nav class="nav__pages">
-                        <div>
-                            <img class="pages" src="../imagenes/carroceria.png" alt="carroceria">
-                            <a class="pages" href="./carroceria.html">Carroceria</a>
+                    <nav class="nav__pages hove__pages">
+                        <div  class="div__pages__hijos" >
+                            <a class="pages" href="./carroceria.html">
+                            <img class="pages" src="../imagenes/carroceria.png" alt="carroceria">Carroceria</a>
                         </div>
-                        <div>
-                            <img class="pages" src="../imagenes/electricidad_electronica.png" alt="electricidad_electronica">
-                            <a class="pages" href="./electricidad_electronica.html">Electricidad y Electronica</a>
+                        <div  class="div__pages__hijos" >
+                            <a class="pages" href="./electricidad_electronica.html">
+                            <img class="pages" src="../imagenes/electricidad_electronica.png" alt="electricidad_electronica">Electricidad</a>
                         </div>
-                        <div>
-                            <img class="pages" src="../imagenes/frenos.png" alt="frenos">
-                            <a class="pages" href="./frenos.html"> frenos</a>
+                        <div  class="div__pages__hijos" >
+                            <a class="pages" href="./frenos.html"> 
+                            <img class="pages" src="../imagenes/frenos.png" alt="frenos">frenos</a> 
                         </div>
-                        <div>
-                            <img class="pages" src="../imagenes/bombas.png" alt="bombas">
-                            <a class="pages" href="./Bombas.html">Bombas</a>
+                        <div  class="div__pages__hijos" >
+                            <a class="pages" href="./Bombas.html">
+                            <img class="pages" src="../imagenes/bombas.png" alt="bombas">Bombas</a>
                         </div>
-                        <div>
-                            <img class="pages" src="../imagenes/tensores.png" alt="correas">
-                            <a class="pages" href="./correas_tensores.html">correas y tensores</a>
+                        <div  class="div__pages__hijos" >
+                             <a class="pages" href="./correas_tensores.html">
+                            <img class="pages" src="../imagenes/tensores.png" alt="correas">Correas</a>
                         </div>
-                        <div>
-                            <img class="pages" src="../imagenes/motor.png" alt="motor">   
-                            <a class="pages" href="./motor.html">motor</a>
+                        <div  class="div__pages__hijos" >
+                            <a class="pages" href="./motor.html">
+                            <img class="pages" src="../imagenes/motor.png" alt="motor"> Motor</a> 
                         </div>
-                        <div>
-                            <img class="pages" src="../imagenes/transmision.png" alt="transmision">
-                            <a class="pages" href="./transmision.html">transmisiòn</a>
+                        <div  class="div__pages__hijos" >
+                            <a class="pages" href="./transmision.html">
+                            <img class="pages" src="../imagenes/transmision.png" alt="transmision">Transmisiòn</a>  
                         </div>
                     </nav>
                 </section>
