--- a/index _copy.html
+++ b/index _copy.html
@@ -7,12 +7,12 @@
     <title> Autopartes y Repuestos G&G</title>
     <link rel="shortcut icon" href="./imagenes/icono.jpg" type="image/x-icon">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
-    <link rel="stylesheet" href="./css/style.css">
+    <link rel="stylesheet" href="./css/style2.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"/>
 </head>
 <body class="body__fondo">
                     <!-- < Menu de header >-->
-        <header class="header" id="inicio">
+        <header class="header " id="inicio">
             <div>
                 <img class="img__icono" src="./imagenes/icono.jpg" alt="icono">  
             </div>
@@ -63,7 +63,7 @@
             <nav class="nav__pages hove__pages">  
                 <div  class="div__pages__hijos  " > 
                     <a  class="texto__menu" href="./pages/carroceria.html">
-                    <img class="pages" src="./imagenes/carroceria.png" alt="carroceria" ">carroceria</a>
+                    <img class="pages" src="./imagenes/carroceria.png" alt="carroceria" ">Carroceria</a>
                 </div>
                 <div class="div__pages__hijos" >
                 <a class="texto__menu " href="./pages/embragues.html"> 
@@ -76,7 +76,7 @@
                 </div>
                 <div class="div__pages__hijos" >
                 <a class="texto__menu" href="./pages/frenos.html"> 
-                    <img class="pages" src="./imagenes/frenos.png" alt="frenos"> frenos</a> 
+                    <img class="pages" src="./imagenes/frenos.png" alt="frenos"> Frenos</a> 
                 </div>
                 <div class="div__pages__hijos" >
                     <a class="texto__menu" href="./pages/Bombas.html">
@@ -88,11 +88,11 @@
                 </div>
                 <div class="div__pages__hijos">  
                     <a class="texto__menu" href="./pages/motor.html"> 
-                    <img class="pages" src="./imagenes/motor.png" alt="motor"> motor</a>  
+                    <img class="pages" src="./imagenes/motor.png" alt="motor"> Motor</a>  
                 </div>
                 <div class="div__pages__hijos">
                     <a class="texto__menu" href="./pages/transmision.html">
-                    <img class="pages" src="./imagenes/transmision.png" alt="transmision"> transmision</a>
+                    <img class="pages" src="./imagenes/transmision.png" alt="transmision"> Transmision</a>
                 </div>
             </nav>
         </section>
