--- a/pages/servicios.html
+++ b/pages/servicios.html
@@ -4,9 +4,13 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name= "description" content="Venta de repuestos para autos y motos, Embragues, Motor,
+    Bombas , Correas. Asesoramiento gratuito. Envio a todo el Pais ">
+    <meta name= "keywords" content="Repuestos, Auto, Moto, Motor, Embragues, Bombas de nafta, Pilas de bombas
+    Auto servicios, Chapa y pintura, Service, Alineacion, Balanceo">
     <link rel="shortcut icon" href="../imagenes/icono.jpg" type="image/x-icon">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
-    <link rel="stylesheet" href="../css/style.css">
+    <link rel="stylesheet" href="../scss/main.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"/>
     <title>Document</title>
 </head>
@@ -115,7 +119,7 @@
                 </div>
         </section>
                 <div>
-                    <iframe  src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3928.3414226903947!2d-69.30699548626473!3d10.071085292802438!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x8e876776baed2795%3A0x4465f249b7c59901!2sCarrera%2023%20%26%20Calle%2013%2C%20Barquisimeto%203001%2C%20Lara%2C%20Venezuela!5e0!3m2!1sen!2sar!4v1636903870977!5m2!1sen!2sar" width="100%" height="450" style="border: 5px;;" allowfullscreen="" loading="lazy" id="ubicacion"></iframe>
+                    <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3928.3414226903947!2d-69.30699548626473!3d10.071085292802438!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x8e876776baed2795%3A0x4465f249b7c59901!2sCarrera%2023%20%26%20Calle%2013%2C%20Barquisimeto%203001%2C%20Lara%2C%20Venezuela!5e0!3m2!1sen!2sar!4v1636903870977!5m2!1sen!2sar" width="100%" height="450" style="border: 5px;;" allowfullscreen="" loading="lazy" id="ubicacion"></iframe>
                 </div>
         <footer class="footer">
             
