--- a/pages/transmision.html
+++ b/pages/transmision.html
@@ -4,11 +4,15 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name= "description" content="Venta de repuestos para autos y motos, Embragues, Motor,
+    Bombas , Correas. Asesoramiento gratuito. Envio a todo el Pais ">
+    <meta name= "keywords" content="Repuestos, Auto, Moto, Motor, Embragues, Bombas de nafta, Pilas de bombas
+    Auto servicios, Chapa y pintura, Service, Alineacion, Balanceo">
     <link rel="shortcut icon" href="../imagenes/icono.jpg" type="image/x-icon">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
-    <link rel="stylesheet" href="../css/style.css">
+    <link rel="stylesheet" href="../scss/main.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"/>
-    <title>transmisión</title>
+    <title>Transmisión</title>
 </head>
 <body id="inicio" class="body__fondo">
     <!--menu del header-->
@@ -139,7 +143,7 @@
 <section class="section__sabiasque">
         
     <div class="clearfix">
-        <iframe  class="col-md-6 float-md-end mb-3 ms-md-3" width="250" height="300" src="https://www.youtube.com/embed/_brGmXOfW_I" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+        <iframe  class="col-md-6 float-md-end mb-3 ms-md-3 center__iframe" width="250" height="300" src="https://www.youtube.com/embed/_brGmXOfW_I" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
         <p> 
         Cada vez es más frecuente que los automóviles nuevos integren transmisión automática, pues esta ofrece modernidad, facilidad y comodidad en la conducción, sin embargo, al ser un sistema tan avanzado puede venir acompañado de unos cuidados especiales que evitarán que el mismo se dañe o sufra daños. Es por esto que a continuación te traemos una serie de recomendaciones para que preserves la vida útil de la transmisión automática de tu vehículo. 
         Revisa con periodicidad el líquido de transmisión. Este debe tener la medida y el color adecuado. El buen estado de este líquido es fundamental, pues se encarga de refrigerar y lubricar todo el sistema. Este líquido debe tener un olor dulce, y su color tiene que ser rojo brillante, si no es así, es una señal de que este debe ser reemplazado. 
@@ -174,7 +178,7 @@
         </div>
     </div>
 </section>
-<section class="section__pago">
+<section class="section__pagos">
     <img src="../imagenes/metodo_de_pago.png" class="rounded float-start img__pagos1" alt="metodo de pago">
     <img src="../imagenes/envio_pais.png" class="rounded float-end img__pagos2" alt="metodo de pago">
 </section>
