--- a/index.html
+++ b/index.html
@@ -3,16 +3,20 @@
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name= "description" content="Venta de repuestos para autos y motos, Embragues, Motor,
+    Bombas , Correas. con Asesoramiento gratuito y Envio a todo el Pais ">
+    <meta name= "keywords" content="Repuestos, Auto, Moto, Motor, Embragues, Bombas de nafta, Pilas de bombas
+    Auto servicios, Chapa y pintura, Service, Alineacion, Balanceo">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title> Autopartes y Repuestos G&G</title>
     <link rel="shortcut icon" href="./imagenes/icono.jpg" type="image/x-icon">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
-    <link rel="stylesheet" href="./css/style.css">
+    <link rel="stylesheet" href="./scss/main.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"/>
 </head>
 <body class="body__fondo">
                     <!-- < Menu de header >-->
-        <header class="header" id="inicio">
+        <header class="header " id="inicio">
             <div>
                 <img class="img__icono" src="./imagenes/icono.jpg" alt="icono">  
             </div>
@@ -63,7 +67,7 @@
             <nav class="nav__pages hove__pages">  
                 <div  class="div__pages__hijos  " > 
                     <a  class="texto__menu" href="./pages/carroceria.html">
-                    <img class="pages" src="./imagenes/carroceria.png" alt="carroceria" ">carroceria</a>
+                    <img class="pages" src="./imagenes/carroceria.png" alt="carroceria" ">arroceria</a>
                 </div>
                 <div class="div__pages__hijos" >
                 <a class="texto__menu " href="./pages/embragues.html"> 
@@ -76,7 +80,7 @@
                 </div>
                 <div class="div__pages__hijos" >
                 <a class="texto__menu" href="./pages/frenos.html"> 
-                    <img class="pages" src="./imagenes/frenos.png" alt="frenos"> frenos</a> 
+                    <img class="pages" src="./imagenes/frenos.png" alt="frenos"> Frenos</a> 
                 </div>
                 <div class="div__pages__hijos" >
                     <a class="texto__menu" href="./pages/Bombas.html">
@@ -88,11 +92,11 @@
                 </div>
                 <div class="div__pages__hijos">  
                     <a class="texto__menu" href="./pages/motor.html"> 
-                    <img class="pages" src="./imagenes/motor.png" alt="motor"> motor</a>  
+                    <img class="pages" src="./imagenes/motor.png" alt="motor"> Motor</a>  
                 </div>
                 <div class="div__pages__hijos">
                     <a class="texto__menu" href="./pages/transmision.html">
-                    <img class="pages" src="./imagenes/transmision.png" alt="transmision"> transmision</a>
+                    <img class="pages" src="./imagenes/transmision.png" alt="transmision"> Transmision</a>
                 </div>
             </nav>
         </section>
@@ -156,7 +160,7 @@
             <div class="div__atencion">
                 <div class="div__atencion__hijos"> 
                     <img class="img__tamaño"src="./imagenes/amplio_stock.png" alt="stock" >
-                <p> <h3 >Con el mas Amplio stock</h3> </p>
+                <p> <h3 > Amplio stock</h3> </p>
                 </div>
                 <div class="div__atencion__hijos">
                     <img class="img__tamaño"src="./imagenes/atencion.png" alt="atencion" >
@@ -164,7 +168,7 @@
                 </div>
                 <div class="div__atencion__hijos"> 
                     <img class="img__tamaño" src="./imagenes/cotizacion.png" alt="cotizacion" >
-                <p> <h3>Cotizaciones al instante</h3></p>
+                <p> <h3>Cotizaciones </h3></p>
                 </div>
                 <div class="div__atencion__hijos" > 
                     <img class="img__tamaño" src="./imagenes/envio_pais.png" alt="envios" >
@@ -172,7 +176,7 @@
                 </div>
                 <div class="div__atencion__hijos" > 
                     <img class="img__tamaño" src="./imagenes/entrega_local.png" alt="entrega local" >
-                <p> <h3> Puede retirar en nuestra sucursal</h3> </p>
+                <p> <h3>  Retira en nuestra sucursal</h3> </p>
                 </div>
             </div>
         </section>
