--- a/pages/carroceria.html
+++ b/pages/carroceria.html
@@ -4,9 +4,13 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name= "description" content="Venta de repuestos para autos y motos, Embragues, Motor,
+    Bombas , Correas. Asesoramiento gratuito. Envio a todo el Pais ">
+    <meta name= "keywords" content="Repuestos, Auto, Moto, Motor, Embragues, Bombas de nafta, Pilas de bombas
+    Auto servicios, Chapa y pintura, Service, Alineacion, Balanceo">
     <link rel="shortcut icon" href="../imagenes/icono.jpg" type="image/x-icon">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
-    <link rel="stylesheet" href="../css/style.css">
+    <link rel="stylesheet" href="../scss/main.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"/>
     <title>Carroceria</title>
 </head>
@@ -106,7 +110,7 @@
                     <label class="consulta__Contacto" for="Marca"> Marca</label>
                         <input type="text" name="Marca" id="marca" placeholder="Escribe la marca" required>
                 <div>
-                <div>
+                <div class="boton"> 
                     <input class="boton__buscar" type="button" value="Ver">
                 </div>  
             </form>
@@ -173,7 +177,7 @@
                 </div>
             </div>
         </section>
-        <section class="section__pago">
+        <section class="section__pagos">
             <img src="../imagenes/metodo_de_pago.png" class="rounded float-start img__pagos1" alt="metodo de pago">
             <img src="../imagenes/envio_pais.png" class="rounded float-end img__pagos2" alt="metodo de pago">
         </section>
