--- a/pages/correas_tensores.html
+++ b/pages/correas_tensores.html
@@ -4,9 +4,13 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name= "description" content="Venta de repuestos para autos y motos, Embragues, Motor,
+    Bombas , Correas. Asesoramiento gratuito. Envio a todo el Pais ">
+    <meta name= "keywords" content="Repuestos, Auto, Moto, Motor, Embragues, Bombas de nafta, Pilas de bombas
+    Auto servicios, Chapa y pintura, Service, Alineacion, Balanceo">
     <link rel="shortcut icon" href="../imagenes/icono.jpg" type="image/x-icon">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
-    <link rel="stylesheet" href="../css/style.css">
+    <link rel="stylesheet" href="../scss/main.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"/>
     <title>Correa y Tensores</title>
 </head>
@@ -102,10 +106,10 @@
                     <label class="consulta__Contacto" for="Marca"> Marca</label>
                         <input type="text" name="Marca" id="marca" placeholder="Escribe la marca" required>
                 <div>
+            </form>
                 <div>
                     <input class="boton__buscar" type="button" value="Ver">
                 </div>  
-            </form>
                 <div class="h3">
                     <h3 class="h3"> Tensores y Correas </h3>
                 </div>
@@ -129,25 +133,29 @@
                 </table>
                 <div class="div__marca">
                     <img class="imagenes__service" src="../imagenes/dayco.png" alt="dayco">
-                    <img src="../imagenes/skf_repuesto.png" alt=" skf">
+                    <img class="imagenes__Service" src="../imagenes/skf_repuesto.png" alt=" skf">
                     <img class="imagenes__service" src="../imagenes/continental.png" alt="continental">
                 </div>  
         </section>
 <!--
     <section><section>  aca va un section donde estaran todos los repuestos pero aun no tengo la info
 -->
-        <section>
-                <h2 class="h2__contacto"> ¿Sabias que ?</h2>
-            
+
+
+
+<h2 class="h2__contacto"> ¿Sabias que ?</h2>
+    <section>
+        <div class="clearfix">
+            <iframe  class="col-md-6 float-md-end mb-3 ms-md-3" width="300" height="300" src="https://www.youtube.com/embed/yTpEFjau9dk" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
             <p class="p__nosotros"> 
                 Como ocurre con otras piezas del automóvil que se ven afectadas directamente por el uso del vehículo, todo depende de varios factores entre los que se destaca el material 
                 (las hay comúnmente de acero recubiertas de caucho, neopreno o de fibra de vidrio) estilo de conducción (eficiente, “agresivo”, …), el tipo de terreno por el que solemos rodar
                 (no es lo mismo una conducción habitual por ciudad que por carretera) e incluso la climatología.
                 Aun así, en términos generales se recomienda que se sigan los parámetros determinados por el fabricante. Esto se debe a que mientras que en modelos antiguos era normal que a los 60.000 km se cambiase,
-                hoy en día podemos encontrar que algunas marcas nos den como consigna los 240.000 km.
+                hoy en día podemos encontrar que algunas marcas nos den como consigna los 240.000 km. 
             </p>
-            <iframe width="500" height="300" src="https://www.youtube.com/embed/yTpEFjau9dk" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-        </section>
+        </div>
+    </section>
 
 <!-- seccion bio de la empresa-->
 
@@ -172,7 +180,7 @@
                 </div>
             </div>
         </section>
-        <section class="section__pago">
+        <section class="section__pagos">
             <img src="../imagenes/metodo_de_pago.png" class="rounded float-start img__pagos1" alt="metodo de pago">
             <img src="../imagenes/envio_pais.png" class="rounded float-end img__pagos2" alt="metodo de pago">
         </section>
