--- a/pages/electricidad_electronica.html
+++ b/pages/electricidad_electronica.html
@@ -4,9 +4,13 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name= "description" content="Venta de repuestos para autos y motos, Embragues, Motor,
+    Bombas , Correas. Asesoramiento gratuito. Envio a todo el Pais ">
+    <meta name= "keywords" content="Repuestos, Auto, Moto, Motor, Embragues, Bombas de nafta, Pilas de bombas
+    Auto servicios, Chapa y pintura, Service, Alineacion, Balanceo">
     <link rel="shortcut icon" href="../imagenes/icono.jpg" type="image/x-icon">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
-    <link rel="stylesheet" href="../css/style.css">
+    <link rel="stylesheet" href="../scss/main.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"/>
     <title>Electricidad y electronica</title>
 </head>
@@ -129,10 +133,10 @@
                     </tr>
                     </tbody>
                 </table>
-                <div class="div__marca">
-                    <img class="imagenes__service" src="../imagenes/marca_bosh.jpg" alt="boosh">
-                    <img  src="../imagenes/ngk.png" alt="ngk" width="150px">
-                </div>  
+                <section class="section__pagos">
+                    <img src="../imagenes/marca_bosh.jpg" class="rounded float-start img__pagos1" alt="metodo de pago">
+                    <img src="../imagenes/ngk.png" class="rounded float-end img__pagos2" alt="metodo de pago">
+                </section>
         </section>
 <!--
     <section><section>  aca va un section donde estaran todos los repuestos pero aun no tengo la info
@@ -140,8 +144,8 @@
 <!-- sabias que ?-->
         <section>
             <h2 class="h2__contacto"> ¿Sabias que ?</h2>
-            <div class="clearfix">
-                <iframe  class="col-md-6 float-md-end mb-3 ms-md-3" width="300" height="300" src="https://www.youtube.com/embed/lq1qT52xQE4" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+            <div class="clearfix ">
+                <iframe  class="col-md-6 float-md-end mb-3 ms-md-3 center__iframe" width="300" height="300" src="https://www.youtube.com/embed/lq1qT52xQE4" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
             <p> 
                 El sistema eléctrico de tu coche es una parte fundamental para que pueda funcionar correctamente. Los problemas que derivan del mal estado
                 de las partes eléctricas suelen causar muchos dolores de cabeza y además, pueden resultar muy costoso repararlos. Por eso, teniendo un buen mantenimiento
@@ -173,7 +177,7 @@
                 </div>
             </div>
         </section>
-        <section class="section__pago">
+        <section class="section__pagos div__marca">
             <img src="../imagenes/metodo_de_pago.png" class="rounded float-start img__pagos1" alt="metodo de pago">
             <img src="../imagenes/envio_pais.png" class="rounded float-end img__pagos2" alt="metodo de pago">
         </section>
