--- a/pages/embragues.html
+++ b/pages/embragues.html
@@ -4,9 +4,13 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name= "description" content="Venta de repuestos para autos y motos, Embragues, Motor,
+    Bombas , Correas. Asesoramiento gratuito. Envio a todo el Pais ">
+    <meta name= "keywords" content="Repuestos, Auto, Moto, Motor, Embragues, Bombas de nafta, Pilas de bombas
+    Auto servicios, Chapa y pintura, Service, Alineacion, Balanceo">
     <link rel="shortcut icon" href="../imagenes/icono.jpg" type="image/x-icon">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
-    <link rel="stylesheet" href="../css/style.css">
+    <link rel="stylesheet" href="../scss/main.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"/>
     <title>Embragues</title>
 </head>
@@ -72,7 +76,7 @@
                             <img class="pages" src="../imagenes/bombas.png" alt="bombas">Bombas</a>
                         </div>
                         <div  class="div__pages__hijos" >
-                             <a class="pages" href="./correas_tensores.html">
+                            <a class="pages" href="./correas_tensores.html">
                             <img class="pages" src="../imagenes/tensores.png" alt="correas">Correas</a>
                         </div>
                         <div  class="div__pages__hijos" >
@@ -137,7 +141,7 @@
             <section>
                 <h2 class="h2__contacto"> ¿Sabias que ?</h2>
                     <div class="clearfix">
-                        <iframe  class="col-md-6 float-md-end mb-3 ms-md-3" width="300" height="300" src="https://www.youtube.com/embed/4u_FWGm4W6M" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                        <iframe  class="col-md-6 float-md-end mb-3 ms-md-3 center__iframe" width="300" height="300" src="https://www.youtube.com/embed/4u_FWGm4W6M" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
                         <p> 
                             El embrague es una de las piezas clave de los vehículos con cambio manual, que siguen siendo mayoría en nuestras carreteras. 
                         Se trata de un componente con un uso aparentemente sencillo, pero que, ante unas malas prácticas, se puede estropear fácilmente, dando paso así a una de las reparaciones más caras de los talleres.
@@ -168,7 +172,7 @@
                     </div>
                 </div>
             </section>
-            <section class="section__pago">
+            <section class="section__pagos">
                 <img src="../imagenes/metodo_de_pago.png" class="rounded float-start img__pagos1" alt="metodo de pago">
                 <img src="../imagenes/envio_pais.png" class="rounded float-end img__pagos2" alt="metodo de pago">
             </section>
