--- a/pages/motor.html
+++ b/pages/motor.html
@@ -4,9 +4,13 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name= "description" content="Venta de repuestos para autos y motos, Embragues, Motor,
+    Bombas , Correas. Asesoramiento gratuito. Envio a todo el Pais ">
+    <meta name= "keywords" content="Repuestos, Auto, Moto, Motor, Embragues, Bombas de nafta, Pilas de bombas
+    Auto servicios, Chapa y pintura, Service, Alineacion, Balanceo">
     <link rel="shortcut icon" href="../imagenes/icono.jpg" type="image/x-icon">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
-    <link rel="stylesheet" href="../css/style.css">
+    <link rel="stylesheet" href="../scss/main.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"/>
     <title>Motor</title>
 </head>
@@ -138,7 +142,7 @@
             <h2 class="h2__contacto"> ¿Sabias que ?</h2>
         
         <div class="clearfix">
-                <iframe  class="col-md-6 float-md-end mb-3 ms-md-3" width="250" height="300" src="https://www.youtube.com/embed/GO3FXIZX07c" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                <iframe  class="col-md-6 float-md-end mb-3 ms-md-3 center__iframe" width="250" height="300" src="https://www.youtube.com/embed/GO3FXIZX07c" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
             <p>   
             El motor es el corazón del coche y si lo cuidamos bien, estaremos dándole unos años más de vida útil a nuestro automóvil y, también, ahorrándonos el desembolso que suponen las averías. Para cuidar el motor de nuestro coche, además de pasar las revisiones recomendadas por el fabricante, podemos
             realizar una serie de sencillos gestos, básicamente, a la hora de poner en marcha el vehículo y durante la conducción.   
@@ -167,7 +171,7 @@
             </div>
         </div>
     </section>
-    <section class="section__pago">
+    <section class="section__pagos">
         <img src="../imagenes/metodo_de_pago.png" class="rounded float-start img__pagos1" alt="metodo de pago">
         <img src="../imagenes/envio_pais.png" class="rounded float-end img__pagos2" alt="metodo de pago">
     </section>
